update to parcel 2 beta 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
+    "esModuleInterop": true,
+    "jsx": "react",
+    "moduleResolution": "node",
     "paths": {
       "~/*": ["./*"]
-    }
+    },
+    "strict": false,
+    "target": "es2017"
   },
   "include": ["src/**/*"]
 }
