--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "normalize.css": "^8.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "parcel-bundler": "^1.12.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "sass": "^1.32.8",
+    "@babel/core": "^7.13.14",
+    "@parcel/transformer-sass": "^2.0.0-nightly.634",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.634",
+    "@parcel/validator-typescript": "^2.0.0-nightly.634",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "axios": "^0.21.1",
+    "contentful": "^8.2.1",
+    "kwesforms": "^2.0.18",
+    "normalize.css": "^8.0.1",
+    "parcel": "^2.0.0-nightly.632",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.1",
     "typescript": "^4.2.3"
   },
-  "presets": [
-    "@babel/preset-react"
-  ]
+  "types": "src/types/types.ts"
 }
